force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/SSP_InsuranceCoveredIndiv__c.object-meta.xml
<CustomObject>
    <description>Stores details about an individual covered under an insurance policy. It could be an existing member in the system or an external individual covered under policy.</description>
    <label>SSP InsuranceCoveredIndiv</label>
    <nameField>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>SSP_InsuranceCoveredIndiv Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSP InsuranceCoveredIndiv</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>