force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <description>This field is used to store date of birth of an Insurance Covered individual</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>