force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/DCIndividualId__c.field-meta.xml
<CustomField>
    <fullName>DCIndividualId__c</fullName>
    <description>This field is used to identify the unique Individual for an External System</description>
    <externalId>true</externalId>
    <label>DCIndividualId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>