force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/DCInsuranceCoveredIndivId__c.field-meta.xml
<CustomField>
    <fullName>DCInsuranceCoveredIndivId__c</fullName>
    <description>This field is used to identify the unique Insurance covered Individual for an External System</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>DCInsuranceCoveredIndivId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>