force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/DCMedicaidPolicyIndividualId__c.field-meta.xml
<CustomField>
    <fullName>DCMedicaidPolicyIndividualId__c</fullName>
    <description>This field is used to identify unique medicaid policy for an external system</description>
    <externalId>true</externalId>
    <label>DCMedicaidPolicyIndividualId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>