force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>ExtAddressLine1__c</fullName>
    <description>Address line 1 of External policy holder/covered individual</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>External Policy Holder Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>