force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>ExtAddressLine2__c</fullName>
    <description>Address line 2 of External policy holder/covered individual</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>External Policy Holder Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>