force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtCity__c.field-meta.xml
<CustomField>
    <fullName>ExtCity__c</fullName>
    <description>City of External policy holder/covered individual</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>External Policy Holder City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>