force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ExtCountryCode__c</fullName>
    <description>Country Code of External policy holder/covered individual</description>
    <label>External Policy Holder Country</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>