force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtCountyCode__c.field-meta.xml
<CustomField>
    <fullName>ExtCountyCode__c</fullName>
    <description>County Code of External policy holder/covered individual</description>
    <label>External Policy Holder County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSPCounty</valueSetName>
    </valueSet>
</CustomField>