force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtPolicyHolderFirstName__c.field-meta.xml
<CustomField>
    <fullName>ExtPolicyHolderFirstName__c</fullName>
    <description>This field is used to store External policy holder first name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>External Policy Holder FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>