force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtPolicyHolderLastName__c.field-meta.xml
<CustomField>
    <fullName>ExtPolicyHolderLastName__c</fullName>
    <description>This field is used to store External Policy Holder Lastname</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>External Policy Holder LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>