force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtPolicyHolderMiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>ExtPolicyHolderMiddleInitial__c</fullName>
    <description>This field is used to store External Policy Holder Middle initial</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>External Policy Holder MiddleInitial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>