force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtPolicyHolderSsn__c.field-meta.xml
<CustomField>
    <fullName>ExtPolicyHolderSsn__c</fullName>
    <description>This field is used to store External Policy Holder SSN</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>External Policy Holder SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>