force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtStateCode__c.field-meta.xml
<CustomField>
    <fullName>ExtStateCode__c</fullName>
    <description>State Code of External policy holder/covered individual</description>
    <label>External Policy Holder State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSPState</valueSetName>
    </valueSet>
</CustomField>