force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtZipCode4__c.field-meta.xml
<CustomField>
    <fullName>ExtZipCode4__c</fullName>
    <description>Zip Code 4 of External policy holder/covered individual</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>External Policy Holder ZipCode 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>