force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/ExtZipCode5__c.field-meta.xml
<CustomField>
    <fullName>ExtZipCode5__c</fullName>
    <description>Zip Code 5 of External policy holder/covered individual</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>External Policy Holder ZipCode 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>