force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>This field is used to store Gender of an Insurance Covered Individual</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSPGender</valueSetName>
    </valueSet>
</CustomField>