force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/HasMedicaidToggle__c.field-meta.xml
<CustomField>
    <fullName>HasMedicaidToggle__c</fullName>
    <description>Used to determine if the individual has medicaid if outside household and not policy holder</description>
    <label>Has Medicaid ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>