force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/InsuranceInternalPolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>InsuranceInternalPolicyHolder__c</fullName>
    <description>This field is used to indicate if an Insurance Covered Individual is an internal policy holder</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Internal Policy Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>