force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/IsCoveredIndividualUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsCoveredIndividualUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated once the insurance covered individual details are entered for a member.</description>
    <label>Is Covered Individual Updated</label>
    <type>Checkbox</type>
</CustomField>