force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identify that it is a Default record. When Insurance Policy is created without entering required fields.</description>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>