force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/IsEnrolled__c.field-meta.xml
<CustomField>
    <fullName>IsEnrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine if it is an enrollment record or access record</description>
    <label>Is Enrolled</label>
    <type>Checkbox</type>
</CustomField>