force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/IsInsuranceCovered__c.field-meta.xml
<CustomField>
    <fullName>IsInsuranceCovered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to identify if the insurance is covered or not</description>
    <label>Is Insurance Covered ?</label>
    <type>Checkbox</type>
</CustomField>