force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/IsPolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>IsPolicyHolder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to identify policy holder</description>
    <label>Is Individual Policy Holder?</label>
    <type>Checkbox</type>
</CustomField>