force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/IsTobbacoConsumerToggle__c.field-meta.xml
<CustomField>
    <fullName>IsTobbacoConsumerToggle__c</fullName>
    <description>This field is used to indicate whether the Insurance Covered Individual is Tobacco Consumer</description>
    <label>Is Tobbaco Consumer</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>