force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/MedicaidId__c.field-meta.xml
<CustomField>
    <fullName>MedicaidId__c</fullName>
    <description>This field is used to store MedicaidId of an Insurance Covered Individual</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>MedicaidId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>