force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/MiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>MiddleInitial__c</fullName>
    <description>This field is use to store Middle Initial of Covered Individual</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>