force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/RelationshipCode__c.field-meta.xml
<CustomField>
    <fullName>RelationshipCode__c</fullName>
    <description>This field is used to indicate the relationship of an Insurance covered Individual</description>
    <label>Relationship Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TPRRelationship</valueSetName>
    </valueSet>
</CustomField>