force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>This field is used to store medicaid policy individual SSN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>