force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/SSP_Asset__c.field-meta.xml
<CustomField>
    <fullName>SSP_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate the related Asset to an Insurance Covered Individual</description>
    <label>SSP_Asset</label>
    <referenceTo>SSP_Asset__c</referenceTo>
    <relationshipName>SSP_InsuranceCoveredIndiv</relationshipName>
    <type>Lookup</type>
</CustomField>