force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/SSP_InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>SSP_InsurancePolicy__c</fullName>
    <description>This field is used to indicate Insurance Policy of an Insurance Covered Individual</description>
    <label>SSP_InsurancePolicy</label>
    <referenceTo>SSP_InsurancePolicy__c</referenceTo>
    <relationshipName>SSP_InsuranceCoveredIndiv</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>