force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/SSP_Member__c.field-meta.xml
<CustomField>
    <fullName>SSP_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate the member of an Insurance Covered Individual</description>
    <label>SSP_Member</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>SSP_InsuranceCoveredIndiv</relationshipName>
    <type>Lookup</type>
</CustomField>