force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/fields/SuffixCode__c.field-meta.xml
<CustomField>
    <fullName>SuffixCode__c</fullName>
    <description>This field is use to store the Covered Individual Member Suffix</description>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>JR</fullName>
                
                
                    <label>JR.</label>
                
                </value>
            
                <value>
                
                    <fullName>SR</fullName>
                
                
                    <label>SR.</label>
                
                </value>
            
                <value>
                
                    <fullName>TW</fullName>
                
                
                    <label>II</label>
                
                </value>
            
                <value>
                
                    <fullName>TH</fullName>
                
                
                    <label>III</label>
                
                </value>
            
                <value>
                
                    <fullName>FO</fullName>
                
                
                    <label>IV</label>
                
                </value>
            
                <value>
                
                    <fullName>FV</fullName>
                
                
                    <label>V</label>
                
                </value>
            
                <value>
                
                    <fullName>SI</fullName>
                
                
                    <label>VI</label>
                
                </value>
            
                <value>
                
                    <fullName>SE</fullName>
                
                
                    <label>VII</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>