force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/recordTypes/InsuranceCoveredIndividual.recordType-meta.xml
<RecordType>
    <fullName>InsuranceCoveredIndividual</fullName>
    <active>true</active>
    <description>This is used to store Insurance Covered Individual details.</description>
    <label>Insurance Covered Individual</label>
</RecordType>