force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/recordTypes/InsuranceExternalCoveredIndividual.recordType-meta.xml
<RecordType>
    <fullName>InsuranceExternalCoveredIndividual</fullName>
    <active>true</active>
    <description>This is used to store external covered individual details</description>
    <label>Insurance External Covered Individual</label>
</RecordType>