force-app/main/default/objects/SSP_InsuranceCoveredIndiv__c/recordTypes/InsuranceExternalPolicyHolder.recordType-meta.xml
<RecordType>
    <fullName>InsuranceExternalPolicyHolder</fullName>
    <active>true</active>
    <description>This is used to store external policy holder details of individual.</description>
    <label>Insurance External Policy Holder</label>
</RecordType>